moved dark mode button to the footer and fixed some bugs in Chrome/Firefox

--- a/themes/iamflat/source/css/style.sass
+++ b/themes/iamflat/source/css/style.sass
@@ -70,12 +70,16 @@ body.dark-mode
 body
   line-height: 1.8
   word-break: break-all
+  background: white
 
 a
   text-decoration: none
   border-bottom: 1px black dashed
 
 // layout
+
+#wrapper
+  background: white
 
 #header
   padding: 1em
@@ -117,6 +121,7 @@ a
 #nav
   text-align: center
   padding: 0.5em 0
+  background: transparent
 
   ul
     height: auto
